5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1662_1399.log
== TEST (2019-04-15 15:29:25) 
-- CODE:
#from mach import* || round || .upper()

x = int(input("Quantidade de votos para Ambrosio Rutra: "))
y = int(input("Quantidade de votos para Demelza Olecram: "))
# q1 + q2 = 100%

total = x + y

p1 = (x * 100) / total
p2 = (y * 100) / total

if( p1 > p2 ):
	print(Ambrosio Rutra)
	print(round(p1, 2))
else:
	print(Demelza Olecram)
	print(round(p2, 2))
-- ERROR:
File "XXXX", line 13
    print(Ambrosio Rutra)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:45) 
-- CODE:
#from mach import* || round || .upper()

x = int(input("Quantidade de votos para Ambrosio Rutra: "))
y = int(input("Quantidade de votos para Demelza Olecram: "))
# q1 + q2 = 100%

total = x + y

p1 = (x * 100) / total
p2 = (y * 100) / total

if( p1 > p2 ):
	print("Ambrosio Rutra")
	print(round(p1, 2))
else:
	print(Demelza Olecram)
	print(round(p2, 2))
-- ERROR:
File "XXXX", line 16
    print(Demelza Olecram)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:55) 
-- CODE:
#from mach import* || round || .upper()

x = int(input("Quantidade de votos para Ambrosio Rutra: "))
y = int(input("Quantidade de votos para Demelza Olecram: "))
# q1 + q2 = 100%

total = x + y

p1 = (x * 100) / total
p2 = (y * 100) / total

if( p1 > p2 ):
	print("Ambrosio Rutra")
	print(round(p1, 2))
else:
	print("Demelza Olecram")
	print(round(p2, 2))
-- OUTPUT:
Ambrosio Rutra
67.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:30:20) 
-- CODE:
#from mach import* || round || .upper()

x = int(input("Quantidade de votos para Ambrosio Rutra: "))
y = int(input("Quantidade de votos para Demelza Olecram: "))
# q1 + q2 = 100%

total = x + y

p1 = (x * 100) / total
p2 = (y * 100) / total

if( p1 > p2 ):
	print("Ambrosio Rutra")
	print(round(p1, 2))
else:
	print("Demelza Olecram")
	print(round(p2, 2))
-- EXECUTION TIME:
0.182733
-- TEST CASE 1:
---- input:
54540000
25850000
---- correct output:
Ambrosio Rutra
67.84
---- user output:
Ambrosio Rutra
67.84
-- TEST CASE 2:
---- input:
1254545
22225469
---- correct output:
Demelza Olecram
94.66
---- user output:
Demelza Olecram
94.66
-- TEST CASE 3:
---- input:
5000
8000

---- correct output:
Demelza Olecram
61.54
---- user output:
Demelza Olecram
61.54
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
